# codernetes

./: .env.sample  .gitignore  README.md  plan.md  pyproject.toml
.codex/checkpoints/: 0199fba4-ff99-7b61-a973-297f53607636.md  019a051e-0f0f-7513-bd2b-df3882fe9647.md
bridge/: __init__.py  __main__.py  base.py  run.py  slack.py  telegram.py
docs/: job_api.md  node_execution_environment.md
docs/phase3/: github_oauth.md  plan_phase3.md  slack_telegram_commands.md
frontend/: index.html  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
master/: api.py  models.py  server.py  storage.py
node/: client.py
var/: codernetes.db  codex-master.db
