[project]
name = "codernetes"
version = "0.1.0"
description = "소규모 팀을 위한 Codernetes 마스터/노드 메시지 허브 프로토타입"
authors = [{name = "June"}]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["master", "node", "bridge"]

[tool.hatch.build.targets.sdist]
include = ["master", "node", "bridge", "README.md", "pyproject.toml"]
